# tabtab

./: .gitignore  Pipfile  README.md  app.py  config.py  database.py  filters.py  handlers.py  init_database.sql  pyproject.toml  run.py  supervisor.conf  tel.py  utils.py
deployment/: ansible.cfg  hosts.yml  init.yml
deployment/group_vars/: digital_ocean.yml
deployment/group_vars/digital_ocean/: vault.yml
deployment/roles/common/handlers/: main.yml
deployment/roles/common/tasks/: main.yml
deployment/roles/common/templates/: config_local.py.j2  nginx_app.conf.j2  supervisor_app.conf.j2
deployment/roles/common/vars/: main.yml
tabtab/: __init__.py  app.py  database.py  filters.py  handlers.py
tests/: test_database.py
