[tool.poetry]
name = "tabtab"
version = "0.1.0"
description = ""
authors = ["Misha Behersky <bmwant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "10.0.1"
attrs = "17.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
